5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1582_579.log
== TEST (2019-03-26 17:26:58) 
-- CODE:
print(2016-107)
-- OUTPUT:
1909
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:29:54) 
-- CODE:
print('"A UFAM tem",2016-1909, "anos de fundaçao.')
-- OUTPUT:
"A UFAM tem",2016-1909, "anos de fundaçao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:30:14) 
-- CODE:
print('"A UFAM tem",2016-1909, "anos de fundaçao."')
-- OUTPUT:
"A UFAM tem",2016-1909, "anos de fundaçao."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:30:41) 
-- CODE:
print('A UFAM tem, 2016-1909, anos de fundaçao.')
-- OUTPUT:
A UFAM tem, 2016-1909, anos de fundaçao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:31:55) 
-- CODE:
print('A UFAM tem', 2016-1909, 'anos de fundaçao.')
-- OUTPUT:
A UFAM tem 107 anos de fundaçao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:31:55) 
-- CODE:
print('A UFAM tem', 2016-1909, 'anos de fundaçao.')
-- OUTPUT:
A UFAM tem 107 anos de fundaçao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:32:03) 
-- CODE:
print('A UFAM tem', 2016-1909, 'anos de fundaçao')
-- OUTPUT:
A UFAM tem 107 anos de fundaçao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:32:32) 
-- CODE:
print('"A UFAM temz"', 2016-1909, '"anos de fundaçao"')
-- OUTPUT:
"A UFAM temz" 107 "anos de fundaçao"
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:33:52) 
-- CODE:
print()
-- OUTPUT:
"A UFAM temz" 107 "anos de fundaçao"
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:35:18) 
-- CODE:
print("A UFAM tem" 2019-1909, "anos de fundaçao"")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2019-1909, "anos de fundaçao"")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:35:28) 
-- CODE:
print("A UFAM tem" 2016-1909, "anos de fundaçao"")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2016-1909, "anos de fundaçao"")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:35:41) 
-- CODE:
print("A UFAM tem" 2016-1909, "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2016-1909, "anos de fundaçao")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:35:54) 
-- CODE:
print("A UFAM tem", 2016-1909, "anos de fundaçao")
-- OUTPUT:
A UFAM tem 107 anos de fundaçao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:36:02) 
-- CODE:
print("A UFAM tem,' 2016-1909, "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem,' 2016-1909, "anos de fundaçao")
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:36:33) 
-- CODE:
print("A UFAM tem,' 2016-1909, "'anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem,' 2016-1909, "'anos de fundaçao")
                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:36:47) 
-- CODE:
print("A UFAM tem,' 2016-1909, "'anos de fundaçao'")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem,' 2016-1909, "'anos de fundaçao'")
                                                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:37:00) 
-- CODE:
print("A UFAM tem,' 2016-1909, anos de fundaçao")
-- OUTPUT:
A UFAM tem,' 2016-1909, anos de fundaçao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:37:28) 
-- CODE:
print("A UFAM tem," 2016-1909, "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem," 2016-1909, "anos de fundaçao")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:37:52) 
-- CODE:
print("A UFAM tem," (2016-1909), "anos de fundaçao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("A UFAM tem," (2016-1909), "anos de fundaçao")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:38:02) 
-- CODE:
print("A UFAM tem," 2016-1909, "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem," 2016-1909, "anos de fundaçao")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:38:37) 
-- CODE:
print("A UFAM tem," 2019-1909, "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem," 2019-1909, "anos de fundaçao")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:38:45) 
-- CODE:
print("A UFAM tem," 2016-1909, "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem," 2016-1909, "anos de fundaçao")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:25:10) 
-- CODE:
print("A UFAM tem," 2016-1909, "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem," 2016-1909, "anos de fundaçao")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:25:22) 
-- CODE:
print("A UFAM tem," 2016-1909, "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem," 2016-1909, "anos de fundaçao")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:25:36) 
-- CODE:
print("A UFAM tem," 2016-1909 , "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem," 2016-1909 , "anos de fundaçao")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:16:45) 
-- CODE:
print('"A UFAM tem," 2016-1909 , "anos de fundaçao"')
-- OUTPUT:
"A UFAM tem," 2016-1909 , "anos de fundaçao"
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:16:59) 
-- CODE:
print('"A UFAM tem," 2016-1909 , "anos de fundaçao"')
-- OUTPUT:
"A UFAM tem," 2016-1909 , "anos de fundaçao"
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:17:27) 
-- CODE:
print("A UFAM tem," 2016-1909 , "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem," 2016-1909 , "anos de fundaçao")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:17:49) 
-- CODE:
print("A UFAM tem", 2016-1909 , "anos de fundaçao")
-- OUTPUT:
A UFAM tem 107 anos de fundaçao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:19:33) 
-- CODE:
print('"A UFAM tem"' 2016-1909 , "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print('"A UFAM tem"' 2016-1909 , "anos de fundaçao")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:22:13) 
-- CODE:
print('"A UFAM tem"' 2016-1909 , "anos de fundaçao")
-- ERROR:
File "XXXX", line 1
    print('"A UFAM tem"' 2016-1909 , "anos de fundaçao")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:03:30) 
-- CODE:
print('"A UFAM tem"' 2016-1909 , "anos de fundaçao.")
-- ERROR:
File "XXXX", line 1
    print('"A UFAM tem"' 2016-1909 , "anos de fundaçao.")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:03:59) 
-- CODE:
print('"A UFAM tem"' 2016-1909 , "anos de fundaçao.")
-- ERROR:
File "XXXX", line 1
    print('"A UFAM tem"' 2016-1909 , "anos de fundaçao.")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:37:29) 
-- CODE:
print('A UFAM tem' 2016-1909 , 'anos de fundaçao.')
-- EXECUTION TIME:
0.197878
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print('A UFAM tem' 2016-1909 , 'anos de funda\xe7ao.')
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:37:40) 
-- CODE:
print('A UFAM tem' 2016-1909, 'anos de fundaçao.')
-- EXECUTION TIME:
0.213441
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print('A UFAM tem' 2016-1909, 'anos de funda\xe7ao.')
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:38:06) 
-- CODE:
print('A UFAM tem', 2016-1909, 'anos de fundaçao.')
-- EXECUTION TIME:
0.187895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/579/main.py", line 1, in <module>
    print('A UFAM tem', 2016-1909, 'anos de funda\xe7ao.')
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 13: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:38:37) 
-- CODE:
print("A UFAM tem," 2016-1909, 'anos de fundaçao.')
-- EXECUTION TIME:
0.147726
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print("A UFAM tem," 2016-1909, 'anos de funda\xe7ao.')
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:38:47) 
-- CODE:
print("A UFAM tem," 2016-1909, 'anos de fundaçao.')
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem," 2016-1909, 'anos de fundaçao.')
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:39:32) 
-- CODE:
print("A UFAM tem," 2016-1909, "anos de fundaçao.")
-- EXECUTION TIME:
0.209135
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print("A UFAM tem," 2016-1909, "anos de funda\xe7ao.")
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:39:33) 
-- CODE:
print("A UFAM tem," 2016-1909, "anos de fundaçao.")
-- EXECUTION TIME:
0.121895
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print("A UFAM tem," 2016-1909, "anos de funda\xe7ao.")
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:39:34) 
-- CODE:
print("A UFAM tem," 2016-1909, "anos de fundaçao.")
-- EXECUTION TIME:
0.147761
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print("A UFAM tem," 2016-1909, "anos de funda\xe7ao.")
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:39:34) 
-- CODE:
print("A UFAM tem," 2016-1909, "anos de fundaçao.")
-- EXECUTION TIME:
0.130257
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print("A UFAM tem," 2016-1909, "anos de funda\xe7ao.")
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:40:06) 
-- CODE:
print("A UFAM tem", 2016-1909, "anos de fundaçao.")
-- EXECUTION TIME:
0.177232
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016-1909, "anos de funda\xe7ao.")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 13: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:40:26) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundaçao.")
-- EXECUTION TIME:
0.220933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - 1909, "anos de funda\xe7ao.")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 13: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:41:14) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.164957
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
